--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ I am currently living in Toronto.<br>
 <ul>
   <li><a herf="https://blog.naver.com/ksarita">Naver Blog</a></li>
   <li><a herf="https://github.com/SaraKim-sy/">GitHub</a></li>
-  <li><a herf="https://www.linkedin.com/in/sarakim-sy/">LinkedIn</a>/li>
+  <li><a herf="https://www.linkedin.com/in/sarakim-sy/">LinkedIn</a></li>
 </ul>
 
 <table border="2">
