--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@ I am currently living in Toronto.<br>
 </p>
 
 <ul>
-  <li><a herf="https://blog.naver.com/ksarita">Naver Blog</a></li>
-  <li><a herf="https://github.com/SaraKim-sy/">GitHub</a></li>
-  <li><a herf="https://www.linkedin.com/in/sarakim-sy/">LinkedIn</a></li>
+  <li><a target="_blank" href="http://www.linkedin.com/in/sarakim-sy">LinkedIn</a> </li>
+  <li><a target="_blank" href="http://www.instagram.com">Instagram</a> </li>
+  <li><a target="_blank" href="http://www.facebook.com">Facebook</a></li>
 </ul>
 
 <table border="2">
