--- a/index.html
+++ b/index.html
@@ -2,48 +2,11 @@
 <html lang="en-us">
 <head>
   <meta charset="UTF-8">
-  <title>Activity 1: Basic HTML Bio</title>
+  <title>Sara Kim</title>
 </head>
 
 <body>
 
-<img width="200" src="https://static.wikia.nocookie.net/spongebob/images/4/46/SVG_SpongeBob_SquarePants.svg/revision/latest/" alt="Cartoon Character">
-
-<p>
-My name is Sara Kim.<br>
-I am from Korea.<br>
-I am currently living in Toronto.<br> 
-</p>
-
-<ul>
-  <li><a target="_blank" href="http://www.linkedin.com/in/sarakim-sy">LinkedIn</a> </li>
-  <li><a target="_blank" href="http://www.instagram.com">Instagram</a> </li>
-  <li><a target="_blank" href="http://www.facebook.com">Facebook</a></li>
-</ul>
-
-<table border="2">
-<thead>
-    <tr>
-        <th colspan="3"> My Favorites </th>
-    </tr>
-    <tr>
-        <th>Movies</th>
-        <th>Songs</th>
-        <th>Activities</th>
-    </tr>
-</thead>
-<tbody>
-    <tr>
-        <td>Home Alone</td>
-        <td>Yes or Yes</td>
-        <td>Baking</td>
-    </tr>
-    <tr>
-        <td>LA LA LAND</td>
-        <td>Heart Shaker</td>
-        <td>Travelling</td>
-    </tr>
-</tbody>
 
 </body>
 
